...
      }
    },
    "Add Aircraft" : {
      "localizations" : {
        "zh-Hans" : {
...
      }
    },
    "Add Battery" : {
      "localizations" : {
        "zh-Hans" : {
...
      }
    },
    "Add Flight" : {
      "localizations" : {
        "zh-Hans" : {
...
      }
    },
    "Add Part" : {
      "localizations" : {
        "zh-Hans" : {
...
      }
    },
    "Address (Optional)" : {
      "localizations" : {
        "zh-Hans" : {
...
      }
    },
    "Aircraft Details" : {
      "localizations" : {
        "zh-Hans" : {
...
      }
    },
    "All" : {
      "localizations" : {
        "zh-Hans" : {
...
      }
    },
    "Cancel" : {
      "localizations" : {
        "zh-Hans" : {
...
      }
    },
    "Capacity (mAh)" : {
      "localizations" : {
        "zh-Hans" : {
...
      }
    },
    "Cell Count (S)" : {
      "localizations" : {
        "zh-Hans" : {
...
      }
    },
    "Duration (sec)" : {
      "localizations" : {
        "zh-Hans" : {
...
      }
    },
    "Edit" : {
      "localizations" : {
        "zh-Hans" : {
...
      }
    },
    "Edit Aircraft" : {
      "localizations" : {
        "zh-Hans" : {
...
      }
    },
    "Edit Battery" : {
      "localizations" : {
        "zh-Hans" : {
...
      }
    },
    "Edit Flight" : {
      "localizations" : {
        "zh-Hans" : {
...
      }
    },
    "Edit Part" : {
      "localizations" : {
        "zh-Hans" : {
...
      }
    },
    "Export All Data (JSON)" : {
      "localizations" : {
        "zh-Hans" : {
...
      }
    },
    "Flight Count" : {
      "localizations" : {
        "zh-Hans" : {
...
      }
    },
    "Flight Details" : {
      "localizations" : {
        "zh-Hans" : {
...
      }
    },
    "Flight Records" : {
      "localizations" : {
        "zh-Hans" : {
...
      }
    },
    "FPV Garage" : {

    },
    "Frame" : {
      "localizations" : {
        "zh-Hans" : {
...
      }
    },
    "Generate Test Data" : {
      "localizations" : {
        "zh-Hans" : {
...
      }
    },
    "Home" : {
      "localizations" : {
        "zh-Hans" : {
...
      }
    },
    "Model (Optional)" : {
      "localizations" : {
        "zh-Hans" : {
...
      }
    },
    "Motor" : {
      "localizations" : {
        "zh-Hans" : {
...
      }
    },
    "My Aircraft" : {
      "localizations" : {
        "zh-Hans" : {
...
      }
    },
    "My Batteries" : {
      "localizations" : {
        "zh-Hans" : {
...
      }
    },
    "My Parts" : {
      "localizations" : {
        "zh-Hans" : {
...
      }
    },
    "Name" : {
      "localizations" : {
        "zh-Hans" : {
...
      }
    },
    "No Aircraft" : {
      "localizations" : {
        "zh-Hans" : {
...
      }
    },
    "No Batteries" : {
      "localizations" : {
        "zh-Hans" : {
...
      }
    },
    "No Flight Records" : {
      "localizations" : {
        "zh-Hans" : {
...
      }
    },
    "Part Details" : {
      "localizations" : {
        "zh-Hans" : {
...
      }
    },
    "Save" : {
      "localizations" : {
        "zh-Hans" : {
...
